--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ twitter: "https://twitter.com/"
 github: "https://github.com/"
 
 # Site config
-baseurl: ""
+baseurl: "/knocknocknik"
 highlighter: rouge
 sass:
   sass_dir: assets/scss
