--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # User config
 author: "Nik Kim"
-tagline: "Palyful Gaming AI"
+tagline: "Gaming AI"
 description: "I believe the true magic of gaming experiences lies in the shared moments of adventure—teaming up with siblings and friends, where laughter and shouts of victory mingled together. This powerful connection between people and games drives my passion for the intersection of Gaming and AI. I am fascinated by the potential of advanced AI technologies and algorithms to create interactive and collaborative machine agents that replicate this experience."
 keywords: "Game, Video Game, AI, ML, RL"
 email: "nnkim@andrew.cmu.edu"
